--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "react-rating": "^2.0.5"
+    "react-star-ratings": "^2.3.0"
   },
   "keywords": [
     "gatsby"
