--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-player": "^2.6.0",
     "react-star-ratings": "^2.3.0",
     "styled-components": "^5.1.1"
   },
