--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-palette": "^1.0.2",
     "react-player": "^2.6.0",
     "react-star-ratings": "^2.3.0",
+    "react-typing-effect": "^2.0.3",
     "styled-components": "^5.1.1"
   },
   "keywords": [
