--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "react-palette": "^1.0.2",
     "react-player": "^2.6.0",
     "react-star-ratings": "^2.3.0",
-    "react-typing-effect": "^2.0.3",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "typewriter-effect": "^2.13.1"
   },
   "keywords": [
     "gatsby"
