--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-source-filesystem": "^2.1.8",
     "gatsby-transformer-json": "^2.4.11",
     "gatsby-transformer-sharp": "^2.2.5",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-circular-progressbar": "^2.0.3",
