--- a/server/heroku.yml
+++ b/server/heroku.yml
@@ -1,6 +1,8 @@
+# https://devcenter.heroku.com/articles/heroku-yml-build-manifest
+# Officially unsupported, but works.
 build:
   languages:
     - go
 
 run:
-  web: server
+  web: go-getting-started
