--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mdx-js/mdx": "^1.1.5",
     "@mdx-js/react": "^1.1.5",
     "babel-plugin-styled-components": "^1.11.1",
+    "date-fns": "^2.16.1",
     "gatsby": "^2.13.50",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-manifest": "^2.2.4",
